--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,17 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  min-height: 10vh;
+  display: flex-inline;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+button{
+   margin: 7%
 }
 
 .App-link {
@@ -35,4 +39,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-body{
+  align-items: center;
+  justify-content: center;
+  background-color: lightblue;
+  min-height: 50vh;
 }
